# GPU-Crypto

./: CMakeLists.txt  Cargo.toml  aes_key.cpp  aes_key.h  cpu_ore.cu  gpu_aes.cu  gpu_ore.cu  gpu_ore_v2.cu  readme.md
gpu_lib/: Cargo.toml
gpu_lib/src/: lib.rs
src/: aes_cpu.rs  main.rs  test.rs
